Update Selenium version
- Update dependencies to latest versions
- Remove deprecated methods involving `selenium-key`